纠正一些错误